NULL =
SUBDIRS = 

webkitscreensaversdir = $(pkgdatadir)/screensavers/webkit@cinnamon.org
webkitscreensavers_DATA = main

webkitexampledir = $(webkitscreensaversdir)/webkit-stars@cinnamon.org
webkitexample_DATA = $(webkitexampledir)/index.html \
                     $(webkitexampledir)/metadata.json


MAINTAINERCLEANFILES = Makefile.in

-include $(top_srcdir)/git.mk
