app_py = [
  '__init__.py',
  'accountsServiceClient.py',
  'baseClient.py',
  'cinnamonClient.py',
  'consoleKitClient.py',
  'keybindingHandlerClient.py',
  'logindClient.py',
  'loginInterface.py',
  'mediaPlayerWatcher.py',
  'nameBlocker.py',
  'sessionClient.py',
  'uPowerClient.py'
]

install_data(app_py, install_dir: join_paths(pkgdatadir, 'dbusdepot'))
