app_py = [
  '__init__.py',
  'eventHandler.py',
  'fader.py',
  'focusNavigator.py',
  'geojs.py',
  'keybindings.py',
  'location.py',
  'openweathermap.py',
  'settings.py',
  'trackers.py',
  'utils.py',
  'weather.py',
  'weather_types.py'
]

install_data(app_py, install_dir: join_paths(pkgdatadir, 'util'))
